// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
.c5 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c4 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 0.0625rem solid;
  border-radius: 2px;
  border-color: #c3c3c3;
  background-color: #ffffff;
  color: #444444;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c2:checked + .c3 {
  border-color: #423b63;
  background-color: #423b63;
}

.c2:checked + .c3::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0 + .c0 {
  margin-top: 0.5rem;
}

.c0:hover .c3 {
  border-color: #423b63;
}

<Checkbox
  disabled={false}
  onChange={[Function]}
>
  <Checkbox__CheckboxLabel
    disabled={false}
  >
    <label
      className="c0"
      disabled={false}
    >
      <Checkbox__CheckboxWrapper>
        <span
          className="c1"
        >
          <Checkbox__StyledCheckbox
            disabled={false}
            onChange={[Function]}
          >
            <input
              className="c2"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
          </Checkbox__StyledCheckbox>
          <Checkbox__CheckboxInner>
            <span
              className="c3 c4"
            />
          </Checkbox__CheckboxInner>
        </span>
      </Checkbox__CheckboxWrapper>
      <Space
        px="2"
      >
        <div
          className="c5"
        >
          Checkbox
        </div>
      </Space>
    </label>
  </Checkbox__CheckboxLabel>
</Checkbox>
`;

exports[`Checkbox should render with props disabled 1`] = `
.c5 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c4 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 0.0625rem solid;
  border-radius: 2px;
  border-color: #c3c3c3;
  background-color: #ffffff;
  color: #444444;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c2:checked + .c3 {
  border-color: #423b63;
  background-color: #423b63;
}

.c2:checked + .c3::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c6:hover .c3 {
  border-color: #423b63;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  opacity: 0.5;
}

.c0 + .c0 {
  margin-top: 0.5rem;
}

<Checkbox
  disabled={true}
  onChange={[Function]}
>
  <Checkbox__CheckboxLabel
    disabled={true}
  >
    <label
      className="c0"
      disabled={true}
    >
      <Checkbox__CheckboxWrapper>
        <span
          className="c1"
        >
          <Checkbox__StyledCheckbox
            disabled={true}
            onChange={[Function]}
          >
            <input
              className="c2"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
          </Checkbox__StyledCheckbox>
          <Checkbox__CheckboxInner>
            <span
              className="c3 c4"
            />
          </Checkbox__CheckboxInner>
        </span>
      </Checkbox__CheckboxWrapper>
      <Space
        px="2"
      >
        <div
          className="c5"
        >
          Checkbox
        </div>
      </Space>
    </label>
  </Checkbox__CheckboxLabel>
</Checkbox>
`;
